<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/s200dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/s5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        tools:src="@drawable/logo" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/s20dp"
        android:background="@color/mustard"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="@dimen/s48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/s20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"/>

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s10dp"
        android:background="@color/mustard"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/lastname"
        android:inputType="text"
        android:minHeight="@dimen/s48dp"
        android:textAlignment="center"
        android:textSize="@dimen/s20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/etNombre"
        app:layout_constraintStart_toStartOf="@id/etNombre"
        app:layout_constraintTop_toBottomOf="@id/etNombre"/>

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s10dp"
        android:background="@color/mustard"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/phone"
        android:inputType="text"
        android:minHeight="@dimen/s48dp"
        android:textAlignment="center"
        android:textSize="@dimen/s20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/etNombre"
        app:layout_constraintStart_toStartOf="@id/etNombre"
        app:layout_constraintTop_toBottomOf="@id/etApellido"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s10dp"
        android:background="@color/mustard"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/email"
        android:inputType="text"
        android:minHeight="@dimen/s48dp"
        android:textAlignment="center"
        android:textSize="@dimen/s20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/etNombre"
        app:layout_constraintStart_toStartOf="@id/etNombre"
        app:layout_constraintTop_toBottomOf="@id/etTelefono"/>

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s10dp"
        android:background="@color/mustard"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/address"
        android:inputType="text"
        android:minHeight="@dimen/s48dp"
        android:textAlignment="center"
        android:textSize="@dimen/s20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/etNombre"
        app:layout_constraintStart_toStartOf="@id/etNombre"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s10dp"
        android:background="@color/mustard"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="@dimen/s48dp"
        android:textAlignment="center"
        android:textSize="@dimen/s20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/etNombre"
        app:layout_constraintStart_toStartOf="@id/etNombre"
        app:layout_constraintTop_toBottomOf="@id/etDireccion" />

    <Button
        android:id="@+id/btRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s10dp"
        android:backgroundTint="@color/navy_blue"
        android:text="@string/register"
        android:textSize="@dimen/s24sp"
        app:layout_constraintEnd_toEndOf="@id/etNombre"
        app:layout_constraintStart_toStartOf="@id/etNombre"
        app:layout_constraintTop_toBottomOf="@id/etContrasena" />

    <Button
        android:id="@+id/btSalir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s10dp"
        android:backgroundTint="@color/red"
        android:text="@string/logout"
        android:textSize="@dimen/s24sp"
        app:layout_constraintEnd_toEndOf="@id/etNombre"
        app:layout_constraintStart_toStartOf="@id/etNombre"
        app:layout_constraintTop_toBottomOf="@id/btRegistro" />

</androidx.constraintlayout.widget.ConstraintLayout>