<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla"
    tools:context=".Login">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/s250dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/s5dp"
        android:layout_marginTop="@dimen/s125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
        tools:src="@drawable/logo" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/s20dp"
        android:background="@color/mustard"
        android:hint="@string/email"
        android:inputType="text"
        android:minHeight="@dimen/s48dp"
        android:textAlignment="center"
        android:textColor="@color/black"

        android:textSize="@dimen/s20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s10dp"
        android:background="@color/mustard"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="@dimen/s48dp"
        android:textAlignment="center"
        android:textColor="@color/black"

        android:textSize="@dimen/s20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/etCorreo"
        app:layout_constraintStart_toStartOf="@id/etCorreo"
        app:layout_constraintTop_toBottomOf="@id/etCorreo" />

    <Button
        android:id="@+id/btLoguear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textSize="@dimen/s24sp"
        app:layout_constraintEnd_toEndOf="@id/etCorreo"
        app:layout_constraintStart_toStartOf="@id/etCorreo"
        app:layout_constraintTop_toBottomOf="@id/etContrasena" />

    <Button
        android:id="@+id/btRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/s10dp"
        android:backgroundTint="@color/green"
        android:text="@string/register"
        android:textSize="@dimen/s24sp"
        app:layout_constraintEnd_toEndOf="@id/etCorreo"
        app:layout_constraintStart_toStartOf="@id/etCorreo"
        app:layout_constraintTop_toBottomOf="@id/btLoguear" />
</androidx.constraintlayout.widget.ConstraintLayout>